// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IdeaPageHeader /> it should render a div with provided class name 1`] = `
<div
  className="idea__header css-class"
>
  <h1
    className="h1"
    id="idea-title"
  >
    Title
  </h1>
  <div
    className="media"
  >
    <UserAvatar
      anchor={true}
      className="pull-left"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      size={45}
      style={Object {}}
      user={null}
    />
    <div
      className="media-body"
    >
      <Connect(IdeaPageHeaderInfos)
        idea={
          Object {
            "id": 1,
            "title": "Title",
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`<IdeaPageHeader /> it should render a title, a user avatar and idea infos 1`] = `
<div
  className="idea__header "
>
  <h1
    className="h1"
    id="idea-title"
  >
    Title
  </h1>
  <div
    className="media"
  >
    <UserAvatar
      anchor={true}
      className="pull-left"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      size={45}
      style={Object {}}
      user={null}
    />
    <div
      className="media-body"
    >
      <Connect(IdeaPageHeaderInfos)
        idea={
          Object {
            "id": 1,
            "title": "Title",
          }
        }
      />
    </div>
  </div>
</div>
`;
